<resources>
    <string name="app_name">Hayanime</string>
    <string name="label_unknown">Unknown</string>
    <string name="label_unknown_date">Unknown Date</string>
    <string name="unknown_symbol">\??</string>
    <string name="empty_number">0</string>
    <string name="not_available">N/A</string>
    <string name="nothing">-</string>

    <string name="title_season">Seasonal</string>
    <string name="title_explore">Explore</string>
    <string name="title_my_list">My List</string>
    <string name="title_choose_season_year">Choose Season Year</string>
    <string name="title_choose_x_year">Choose %1$s Year</string>
    <string name="title_edit_anime">Edit Anime Details</string>
    <string name="title_anime_detail">Anime Detail</string>
    <string name="title_delete_anime_confirmation">Delete Anime from the List?</string>
    <string name="title_logout_confirmation">Logout from your Account?</string>
    <string name="title_user_stats">User Statistics</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile_info">Profile Info</string>
    <string name="title_myanimelist_stats">MyAnimeList Statistics</string>
    <string name="title_pictures">Pictures</string>

    <string name="body_myanimelist_stats">Watchlist statistics from anime lists on MyAnimeList</string>

    <string name="search_hint">Search anime from MyAnimeList</string>

    <string name="header_start_page">Discover Your Favorite Anime.</string>
    <string name="subheader_start_page">Find and save anime to your personal list.</string>

    <string name="label_anime">Anime</string>
    <string name="label_episodes">Episodes</string>
    <string name="label_nsfw">NSFW</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_this_season">this season</string>
    <string name="label_priority_watch">Priority watch this anime</string>
    <string name="label_rewatching">Rewatching this anime</string>
    <string name="label_total_rewatch">Total time rewatch this anime</string>
    <string name="label_possibility_rewatch">Possibility rewatch this anime</string>
    <string name="label_progress">Progress</string>
    <string name="label_my_progress">My Progress</string>
    <string name="label_start_date">Start Date</string>
    <string name="label_finish_date">Finish Date</string>
    <string name="label_duration">Duration</string>
    <string name="label_year">Year</string>
    <string name="label_month">Month</string>
    <string name="label_day">Day</string>
    <string name="label_today">Today</string>
    <string name="label_now">Now</string>
    <string name="label_score">Score</string>
    <string name="label_my_score">My Score</string>
    <string name="label_mean_score">Mean Score</string>
    <string name="label_comments">Comments</string>
    <string name="label_tags">Tags</string>
    <string name="label_remove_from_list">Remove from List</string>
    <string name="label_save_changes">Save Changes</string>
    <string name="label_select">Select…</string>
    <string name="label_show_advanced">Show Advanced</string>
    <string name="label_hide_advanced">Hide Advanced</string>
    <string name="label_no_status">No Status</string>
    <string name="label_supporter">I\'m a supporter</string>
    <string name="label_not_supporter">Not a supporter</string>
    <string name="label_rewatched">Rewatched</string>
    <string name="label_user_scored">User Scored</string>
    <string name="label_ranking">Ranking</string>
    <string name="label_popularity">Popularity</string>
    <string name="label_members">Members</string>
    <string name="label_statistics">Statistics</string>
    <string name="label_recommendations">Recommendations</string>
    <string name="label_background">Background</string>
    <string name="label_synonyms">Synonyms</string>
    <string name="label_english">English</string>
    <string name="label_japanese">Japanese</string>
    <string name="label_more_info">More Information</string>
    <string name="label_studio">Studio</string>
    <string name="label_broadcast">Broadcast</string>
    <string name="label_source">Source</string>
    <string name="label_read_more">Read more</string>
    <string name="label_show_less">Show less</string>
    <string name="label_filter_season">Filter Season</string>
    <string name="label_sort_by">Sort by</string>

    <!-- string format -->
    <string name="episode_duration">%1$s/eps</string>
    <string name="num_episodes">%1$s Episodes</string>
    <string name="hyphen_string">%1$s - %2$s</string>
    <!-- string format -->

    <string name="action_delete">Delete</string>
    <string name="action_logout">Logout</string>
    <string name="action_retry">Retry</string>
    <string name="action_share">Share</string>
    <string name="action_open_in_browser">Open in Browser</string>
    <string name="btn_login_with_mal">Login with MyAnimeList</string>

    <string name="info_empty_initial_search">Oops! You haven\'t performed any searches yet</string>
    <string name="info_no_results_found">No results found for %1$s</string>
    <string name="info_no_pictures">No pictures found</string>

    <string name="description_profile">Profile</string>
    <string name="description_edit_this_anime">Edit this anime</string>
    <string name="description_add_one_episode">Add one episode</string>
    <string name="description_translate_syn">Translate synopsis</string>
    <string name="description_translate_bg">Translate background</string>
    <string name="description_filter_season">Show season filter options</string>
    <string name="description_sort_mylist">Show sort options for My List</string>

    <string name="message_back_pressed">Press back again to exit</string>
    <string name="message_no_internet">No internet connection</string>
    <string name="message_timeout">Request timed out</string>
    <string name="message_failed_to_connect">Failed to connect to server</string>
    <string name="message_connection_lost">Connection lost</string>
    <string name="message_error_invalid_token">Session expired. Please log in again</string>
    <string name="message_error_occurred">An error occurred</string>
    <string name="message_invalid_redirect">Invalid redirect</string>
    <string name="message_invalid_code">Invalid code</string>
    <string name="message_invalid_code_verifier">Invalid code verifier</string>
    <string name="message_query_short">Search query is too short</string>
    <string name="message_error_missing_anime_id">Anime ID missing. Please try again later</string>
    <string name="message_missing_anime_id_or_current_episode">Missing anime ID or current episode</string>
    <string name="message_missing_anime_id_reopen_page">Missing anime ID. Please re-open this page</string>
    <string name="message_failed_load_data">Failed to load data, please try again later!</string>
    <string name="message_delete_anime_confirmation">Remove the anime data details from your list. This action cannot be undone</string>
    <string name="message_logout_confirmation">This will clear your session and search history</string>
    <string name="message_failed_save_changes">Failed to save changes</string>
    <string name="message_failed_delete_anime">Failed to delete anime</string>
    <string name="message_anime_updated_successfully">Anime details updated successfully</string>
    <string name="message_anime_deleted_successfully">Anime removed from your list</string>
    <string name="message_same_data">The data is totally same</string>
    <string name="message_error_app_not_found">App not found to handle this action</string>

    <!-- Preference: NSFW -->
    <string name="settings_nsfw_title">NSFW Content</string>
    <string name="pref_nsfw_search_title">Search results</string>
    <string name="pref_nsfw_search_summary">Show anime with adult or explicit themes in search results</string>
    <string name="pref_nsfw_suggestions_title">Suggestions</string>
    <string name="pref_nsfw_suggestions_summary">Allow recommendations to include mature-rated anime</string>
    <string name="pref_nsfw_mylist_title">My List</string>
    <string name="pref_nsfw_mylist_summary">Display NSFW anime that you have saved to your list</string>
    <!-- Preference: NSFW -->

    <!-- Preference: Theme -->
    <string name="settings_theme_title">Display</string>
    <string name="pref_theme_title">Theme</string>
    <string name="theme_entry_system_default">System Default</string>
    <string name="theme_entry_light">Light</string>
    <string name="theme_entry_dark">Dark</string>
    <string-array name="theme_entries">
        <item>@string/theme_entry_system_default</item>
        <item>@string/theme_entry_light</item>
        <item>@string/theme_entry_dark</item>
    </string-array>
    <string-array name="theme_values">
        <item>system_default</item>
        <item>light</item>
        <item>dark</item>
    </string-array>
    <!-- Preference: Theme -->

    <plurals name="num_user">
        <item quantity="one">1 user</item>
        <item quantity="other">%1$s users</item>
    </plurals>

    <plurals name="count_days">
        <item quantity="zero">Same day</item>
        <item quantity="one">%1$s day</item>
        <item quantity="other">%1$s days</item>
    </plurals>
</resources>