<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/settings_nsfw_title">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="show_nsfw_content"
            app:summary="@string/pref_nsfw_search_summary"
            app:title="@string/pref_nsfw_search_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="show_nsfw_suggestions"
            app:summary="@string/pref_nsfw_suggestions_summary"
            app:title="@string/pref_nsfw_suggestions_title" />

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="show_nsfw_my_list"
            app:summary="@string/pref_nsfw_mylist_summary"
            app:title="@string/pref_nsfw_mylist_title" />
    </PreferenceCategory>
</PreferenceScreen>