<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_search">

    <fragment
        android:id="@+id/navigation_season"
        android:name="com.animegatari.hayanime.ui.main.season.SeasonFragment"
        android:label="@string/title_season"
        tools:layout="@layout/fragment_season" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.animegatari.hayanime.ui.main.search.SearchFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_my_list"
        android:name="com.animegatari.hayanime.ui.main.myList.MyListFragment"
        android:label="@string/title_my_list"
        tools:layout="@layout/fragment_my_list" />

    <fragment
        android:id="@+id/navigation_edit_anime"
        android:name="com.animegatari.hayanime.ui.detail.EditOwnListFragment"
        android:label="@string/title_edit_anime"
        tools:layout="@layout/fragment_edit_own_list">

        <argument
            android:name="animeId"
            app:argType="integer" />

        <argument
            android:name="requestKey"
            app:argType="string" />
    </fragment>

    <action
        android:id="@+id/action_global_to_edit_anime"
        app:destination="@id/navigation_edit_anime"
        app:enterAnim="@anim/slide_in_bottom"
        app:exitAnim="@anim/fade_out"
        app:popEnterAnim="@anim/fade_in"
        app:popExitAnim="@anim/slide_out_bottom" />

    <navigation
        android:id="@+id/anime_detail_graph"
        app:startDestination="@id/navigation_anime_detail">

        <argument
            android:name="animeId"
            app:argType="integer" />

        <fragment
            android:id="@+id/navigation_anime_detail"
            android:name="com.animegatari.hayanime.ui.detail.AnimeDetailFragment"
            android:label="@string/title_anime_detail"
            tools:layout="@layout/fragment_anime_detail">

            <argument
                android:name="animeId"
                app:argType="integer" />

            <action
                android:id="@+id/action_animeDetail_to_animePictures"
                app:destination="@id/navigation_anime_pictures"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/fade_out"
                app:popEnterAnim="@anim/fade_in"
                app:popExitAnim="@anim/slide_out_right" />

            <action
                android:id="@+id/action_animeDetail_self"
                app:destination="@id/navigation_anime_detail"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/fade_out"
                app:popEnterAnim="@anim/fade_in"
                app:popExitAnim="@anim/slide_out_right" />

            <action
                android:id="@+id/action_animeDetail_to_editAnime"
                app:destination="@id/navigation_edit_anime"
                app:enterAnim="@anim/slide_in_bottom"
                app:exitAnim="@anim/fade_out"
                app:popEnterAnim="@anim/fade_in"
                app:popExitAnim="@anim/slide_out_bottom" />
        </fragment>

        <fragment
            android:id="@+id/navigation_anime_pictures"
            android:name="com.animegatari.hayanime.ui.detail.AnimePicturesFragment"
            android:label="@string/title_pictures"
            tools:layout="@layout/fragment_anime_pictures">

            <argument
                android:name="animeId"
                app:argType="integer" />
        </fragment>
    </navigation>

    <action
        android:id="@+id/action_global_to_anime_detail_graph"
        app:destination="@id/anime_detail_graph"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/fade_out"
        app:popEnterAnim="@anim/fade_in"
        app:popExitAnim="@anim/slide_out_right" />
</navigation>