<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.feature.main.season.SeasonFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingHorizontal="@dimen/recyclerview_corner_padding_small"
            android:paddingTop="@dimen/recyclerview_corner_padding_small"
            android:paddingBottom="@dimen/layout_padding_bottom"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="2"
            tools:itemCount="3"
            tools:listitem="@layout/layout_anime_grid" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScrollColor="?attr/colorSurface">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:buttonGravity="center_vertical"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:logo="@drawable/hayanime_logo"
            app:menu="@menu/avatar_menu" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp">

            <androidx.constraintlayout.helper.widget.Flow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:constraint_referenced_ids="btn_season, btn_open_filter"
                app:flow_firstHorizontalStyle="spread_inside"
                app:flow_horizontalGap="4dp"
                app:flow_lastHorizontalStyle="spread_inside"
                app:flow_wrapMode="chain"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_season"
                style="@style/Widget.Material3.Button.TonalButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_symbol"
                app:cornerRadius="16dp"
                app:icon="@drawable/avd_untargeted_to_targeted_24"
                app:iconPadding="6dp"
                app:layout_constrainedWidth="true"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_open_filter"
                style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/description_filter_season"
                android:padding="12dp"
                app:cornerRadius="16dp"
                app:icon="@drawable/ic_tune_24px_rounded"
                app:iconSize="24dp"
                app:layout_constrainedWidth="true"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_info_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="32dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:text="@string/info_no_results_found"
        tools:visibility="visible" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>